--- a/master.css
+++ b/master.css
@@ -9,7 +9,7 @@
 	-ms-user-select: none;
 }
 
-#toolbar{
+/*#toolbar{
 	width: 100%;
 	height: 50px;
 	padding: 10px;
@@ -26,4 +26,18 @@
 	display:  inline-block;
 	text-align: center;
 	padding: 5px;
+}
+*/
+.subhead {
+	font-size: large;
+	font-weight: bolder;
+}
+#heading {
+	font-size:36px;
+	font-weight:bolder;
+}
+body {
+	width:800px;
+	margin:auto;
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 }
